[project]
name = "awake-leaderboard"
version = "0.1.0"
description = "An open-source project leaderboard that builds itself"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
awake-lb = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
